# thumbnailify

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
libthumbnailer/: Cargo.toml
libthumbnailer/benches/: benchmark.rs
libthumbnailer/src/: error.rs  file.rs  lib.rs  thumbnail.rs
src/: error.rs  file.rs  hash.rs  lib.rs  sizes.rs  thumbnailer.rs
thumbnailer/: Cargo.toml
thumbnailer/src/: main.rs
thumbnailify/: Cargo.toml
thumbnailify/benches/: benchmark.rs
thumbnailify/src/: error.rs  file.rs  hash.rs  lib.rs  sizes.rs  thumbnail.rs  thumbnailer.rs
