[package]
name = "thumbnailify"
version = "0.1.0"
edition = "2024"

[lib]
name = "thumbnailify"

[dependencies]
dirs = "6.0.0"
fast_image_resize = { version = "5.1.2", features = ["image"] }
image = { version = "0.25.5" }
jxl-oxide = { version = "0.11.2", features = ["image"] }
md-5 = "0.10.6"
url = "2.5.4"

[features]
avif = ["image/avif-native"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
