[package]
name = "thumbnailify"
version = "0.1.0"
edition = "2024"

[lib]
name = "thumbnailify"

[dependencies]
dirs = "6.0.0"
md-5 = "0.10.6"
thiserror = "2.0.11"
url = "2.5.4"
image = { version = "0.25.5" }
libthumbnailer = { path = "../libthumbnailer" }
mime_guess = "2.0.5"
which = "7.0.2"
rust-ini = "0.21.1"
png = "0.17.16"
tempfile = "3.17.1"
shell-words = "1.1.0"

[dev-dependencies]
serial_test = "3"
temp-env = "0.3.6"
